Add another restart button when the game is being played

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ main {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
+    gap: 7rem;
 }
 
 :root {
